wrote few paragraphs of the Úvod

--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -1,7 +1,11 @@
 \chapter*{Úvod}
 \addcontentsline{toc}{chapter}{Úvod}
 
-Následuje několik ukázkových kapitol, které doporučují, jak by se
-měla bakalářská práce sázet. Primárně popisují použití \TeX{}ové
-šablony, ale obecné rady poslouží dobře i~uživatelům jiných
-systémů.
+Boj nablízko s chladnou zbraní je jev, kterým se zabývá mnoho videoher. Mezi žánry, které se na něj zaměřují, patří akční adventury, RPG a hack-n-slash. Důležitý koncept to je i pro žánr válečných strategických her, doplňující roli pak mívá například v FPS nebo stealth hrách. Zkrátka, pokud hra ztvárňuje nějaký konflikt řešený násilnou cestou, s vysokou pravděpodobností v ní nějaká chladná zbraň figuruje.
+
+Herní mechaniky, skrz které je boj zblízka realizován, si od počátku éry videoher prošly složitou evolucí a samozřejmě každý žánr si je pojímá dost po svém aby ladily s jeho dalšími specifiky. I tak je ale překvapivě jednoduché popsat určité vlastnosti, které vykrystalizovaly jako společné jádro, které většinová část her sdílí.
+
+Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto simplistické rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že na něj jde napasovat víceméně libovolná zbraň, od jednoručního meče přes halapartnu až po rozbitou sklenici od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může cítit pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik [], celkově jde o oblast překvapivě málo prozkoumanou. 
+
+Mezi očividné výzvy patří návrh schéma ovládání.  Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru s třemi úhly volnosti pro pohyb a dalšími třemi pro rotaci, z nichž žádný nemůžeme bez následků zanedbat. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména v oblasti Virtuální Reality), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. Rovněž přinášejí své vlastní problémy. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly. Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
+
