added references to some games + Unity engine

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -12,6 +12,38 @@
 %
 %  ===========================================================================
 
+@MISC{Unity,
+  title = "Unity",
+  organization = "Unity Technologies",
+  location = "Spojené Státy Americké",
+  howpublished = "[Internet]",
+  year = 2005,
+}
+
+@MISC{DieByTheSword,
+  title = "Die by the Sword",
+  organization = "Treyarch Corporation",
+  location = "Spojené Státy Americké",
+  howpublished = "[PC CD-ROM]",
+  year = 1998,
+}
+
+@MISC{MountAndBlade,
+  title = "Mount \& Blade",
+  organization = "TaleWorlds Entertainment",
+  location = "Švédsko",
+  howpublished = "[PC CD-ROM]",
+  year = 2008
+}
+
+@MISC{KCD,
+  title = "Kingdom Come: Deliverance",
+  organization = "Warhorse Studios s.r.o.",
+  location = "Česká Republika",
+  howpublished = "[PC Steam]",
+  year = 2018
+}
+
 @BOOK{Andel07,
   title = {Základy matematické statistiky},
   publisher = {Matfyzpress},
