filled-in some general info

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -12,7 +12,17 @@
 %
 %  ===========================================================================
 
-@MISC{Unity,
+@software{Unity,
+  author = {{Unity Technologies}},
+  title = {Unity Engine},
+  url = {https://unity.com/},
+  version = {2022.2.10},
+  date = {2023-03-25},
+}
+
+
+
+MISC{Unity,
   title = "Unity",
   organization = "Unity Technologies",
   location = "Spojené Státy Americké",
