some corrections to Úvod

--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -1,15 +1,15 @@
 \chapter*{Úvod}
 \addcontentsline{toc}{chapter}{Úvod}
 
-Boj nablízko s chladnou zbraní najdeme v mnoha videohrách. Mezi žánry, které se na něj zaměřují, patří akční adventury, RPG a hack-n-slash. Důležitý koncept to je i pro žánr válečných strategických her, doplňující roli pak mívá například v FPS nebo stealth hrách. Zkrátka, pokud hra ztvárňuje nějaký konflikt řešený násilnou cestou, s vysokou pravděpodobností v ní nějaká chladná zbraň figuruje, ať už jde o středověkou halapartnu, světelný meč, či židli v hospodské rvačce.
+Boj nablízko s chladnou zbraní najdeme v mnoha videohrách. Mezi žánry, které se na něj zaměřují, patří akční adventury, RPG\footnote{Role Playing Game - hra na hrdiny} a hack-n-slash. Důležitý koncept to je i pro žánr válečných strategických her, doplňující roli pak mívá například v FPS\footnote{First Person Shooter - střílečka z první osoby} nebo stealth hrách. Zkrátka, pokud hra ztvárňuje nějaký konflikt řešený násilnou cestou, s vysokou pravděpodobností v ní nějaká chladná zbraň figuruje, ať už jde o světelný meč, středověký řemdih, či židli v hospodské rvačce.
 
-Herní mechaniky, skrz které je boj zblízka realizován, si od počátku éry videoher prošly složitou evolucí a přirozeně každý žánr je adaptuje osobitým způsobem, aby ladily s jeho dalšími specifiky. I tak je ale překvapivě jednoduché popsat určité vlastnosti, které vykrystalizovaly jako společné jádro, které většinová část her sdílí.
+Herní mechaniky, skrz které je boj zblízka realizován, si od počátku éry videoher prošly složitou evolucí a přirozeně každý žánr je adaptuje osobitým způsobem, aby ladily s jeho dalšími specifiky. I tak je ale překvapivě jednoduché popsat určité vlastnosti, které vykrystalizovaly jako společné jádro, jež většinová část her sdílí.
 
-Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto simplistické rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že na něj jde napasovat víceméně libovolná zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může cítit pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik, celkově jde o oblast překvapivě málo prozkoumanou. 
+Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto simplistické rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že funguje univerzálně pro víceméně libovolnou zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může mít pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik (\citet(DieByTheSword), \citet(MountABlade), \citet(KCD)) - podrobněji je rozebereme v první kapitole. Akademický výzkum pak v tomto směru, pokud je autorovi této práce známo, není prakticky žádný, a celkově tedy jde o oblast překvapivě málo prozkoumanou.
   
-Mezi očividné výzvy patří návrh schéma ovládání.  Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru s třemi úhly volnosti pro pohyb a dalšími třemi pro rotaci, z nichž žádný nemůžeme bez následků zanedbat. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména v oblasti Virtuální Reality), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. Rovněž přinášejí své vlastní problémy. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly. Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
+Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání.  Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru s třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, z nichž žádný nemůžeme bez následků zanedbat. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména v oblasti Virtuální Reality), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. Rovněž přinášejí své vlastní problémy. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly. Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
  
-Jakmile se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad mečem, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě bude provádět věci, se kterými autor při vytváření hry nikdy nepočítal. Jak zařídíme, aby při tom nehrozilo prolomení iluze virtuálního světa, kterou se hra snaží budovat? Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci meče. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles. Zahrnutím meče do fyzikální simulace si můžeme ušetřit kus práce, který by jinak musel být implementován ručně a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které hráč důverně zná z reálného světa, což má potenciál dále zvýšit intuitivnost ovládání. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik. 
+Jakmile by se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad mečem, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě bude provádět věci, se kterými autor při vytváření hry nikdy nepočítal. Jak zařídíme, aby při tom nehrozilo prolomení iluze virtuálního světa, kterou se hra snaží budovat? Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci meče. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles. Zahrnutím meče do fyzikální simulace si můžeme ušetřit kus práce, který by jinak musel být implementován ručně a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které hráč důverně zná z reálného světa, což má potenciál dále zvýšit intuitivnost ovládání. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik. 
 
 Cílem této práce je implementovat kostru jednoduché akční hry z pohledu první osoby - zahrnující hráčem ovladatelnou postavu, prostředí po němž se může pohybovat, velmi jednoduchého počítačem ovládaného protivníka, a zbraň. Zbraní, na kterou se zaměříme, bude \textbf{jedenapůlruční meč}. Navrhneme schéma ovládání pro klávesnici a myš, které se neshoduje s žádným dosud používaným, a je šité na míru naší vybrané zbrani. Budeme při tom usilovat o maximální kontrolu a reakceschopnost hráče při zachování základní uživatelské přívětivosti. Implementaci provedeme v komerčně používaném herním enginu Unity za vydatné pomoci jeho vestavěného fyzikálního subsystému. Na konci provedeme testy hratelnosti na dobrovolnících. Pokud se ukáže jako proveditelné, bez úprav jeho vnitřní implementace, aplikovat meč jako nástroj ke hraní tradičních her golf a baseball, a obě tyto hry, stejně jako souboj s protivníkem, projdou skrze testy hratelnosti s přijatelnými výsledky, prohlásíme, že náš systém poskytuje nadprůměrnou ovladatelnost.
 
