--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -7,17 +7,12 @@ Herní mechaniky, skrz které je boj zblízka realizován, si od počátku éry 
 
 Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto simplistické rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že funguje univerzálně pro víceméně libovolnou zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může mít pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik (\citet(DieByTheSword), \citet(MountABlade), \citet(KCD)) - podrobněji je rozebereme v první kapitole. Akademický výzkum pak v tomto směru, pokud je autorovi této práce známo, není prakticky žádný, a celkově tedy jde o oblast překvapivě málo prozkoumanou.
   
-Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání.  Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru s třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, z nichž žádný nemůžeme bez následků zanedbat. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména v oblasti Virtuální Reality), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. Rovněž přinášejí své vlastní problémy. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly. Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
+Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání. Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru se třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, zanedbání jakéhokoliv z nich přinese netriviální důsledky. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména ovladače pro VR\footnote{Virtuální Realita}), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly (blíže je představíme v kapitole 1). Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
  
-Jakmile by se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad mečem, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě bude provádět věci, se kterými autor při vytváření hry nikdy nepočítal. Jak zařídíme, aby při tom nehrozilo prolomení iluze virtuálního světa, kterou se hra snaží budovat? Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci meče. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles. Zahrnutím meče do fyzikální simulace si můžeme ušetřit kus práce, který by jinak musel být implementován ručně a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které hráč důverně zná z reálného světa, což má potenciál dále zvýšit intuitivnost ovládání. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik. 
+Jakmile se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad zbraní, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě ne všechny úkony, o které se pokusí, budou mezi těmi, se kterými autor při vytváření hry počítal. Jak zaručíme, že i v takové situaci bude chování hry odpovídat hráčovu očekávání?\footnote{Pomyslete jaké zklamání a pocit zrady musí cítit hráč, který se jen nevinně pokusil podrbat mečem na zádech, načež jeho postava bez varování vystřelila kilometr do oblak a svou smrtí smazala hodinu neuloženého postupu} Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci zbraně. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles, jež na moderním hardwaru nemají problém zpracovávat v reálném čase stovky objektů. Zahrnutím meče do fyzikální simulace si můžeme ušetřit kus práce, který by jinak musel být implementován ručně, a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které již hráči je povědomé z reálného světa, což může být nápomocné k hráčovu rychlému intuitivnímu uchopení systému. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik.\footnote{Příklady po krátkém zamyšlení: odrážení střel, srážení hledí protivníkovy helmy, odpalování předmětů na protivníka, imerzivní tlačítka stisknutelná úderem meče}
 
-Cílem této práce je implementovat kostru jednoduché akční hry z pohledu první osoby - zahrnující hráčem ovladatelnou postavu, prostředí po němž se může pohybovat, velmi jednoduchého počítačem ovládaného protivníka, a zbraň. Zbraní, na kterou se zaměříme, bude \textbf{jedenapůlruční meč}. Navrhneme schéma ovládání pro klávesnici a myš, které se neshoduje s žádným dosud používaným, a je šité na míru naší vybrané zbrani. Budeme při tom usilovat o maximální kontrolu a reakceschopnost hráče při zachování základní uživatelské přívětivosti. Implementaci provedeme v komerčně používaném herním enginu Unity za vydatné pomoci jeho vestavěného fyzikálního subsystému. Na konci provedeme testy hratelnosti na dobrovolnících. Pokud se ukáže jako proveditelné, bez úprav jeho vnitřní implementace, aplikovat meč jako nástroj ke hraní tradičních her golf a baseball, a obě tyto hry, stejně jako souboj s protivníkem, projdou skrze testy hratelnosti s přijatelnými výsledky, prohlásíme, že náš systém poskytuje nadprůměrnou ovladatelnost.
+Cílem této práce je implementovat kostru jednoduché akční hry z pohledu první osoby - zahrnující hráčem ovladatelnou postavu, prostředí po němž se může pohybovat, velmi jednoduchého počítačem ovládaného protivníka, a zbraň. Zbraní, na kterou se zaměříme, bude \textbf{jedenapůlruční meč}\footnote{\url{https://cs.wikipedia.org/wiki/Dlouh\%C3\%BD_me\%C4\%8D}}. Navrhneme schéma ovládání pro klávesnici a myš, které se neshoduje s žádným dosud používaným, a je šité na míru naší vybrané zbrani. Budeme při tom usilovat o maximální kontrolu a reakceschopnost hráče při zachování základní uživatelské přívětivosti. Implementaci provedeme v komerčně používaném herním enginu Unity za vydatné pomoci jeho vestavěného fyzikálního subsystému. Kód bude psán v souladu s dobrými praktikami objektového programování a standarní štábní kulturou enginu Unity, doprovázený podrobnou programátorskou dokumentací a extenzivními testy. Celý výsledný produkt bude umístěn veřejně pod MIT licencí.
 
 \section*{Struktura práce}
 
 V kapitole 1 si blíže vysvětlíme pojmy, se kterými budeme pracovat, uvedeme se do problematiky boje s chladnými zbraněmi ve videohrách, nastíníme příklad typického stavu a několik příkladů, ze kterých chceme čerpat inspiraci. Kapitolu 2 věnujeme stručnému úvodu do použitého herního enginu Unity a podrobnějšímu představení jeho fyzikálního subsystému, na němž tato práce do značné míry stojí. Dále budeme pokračovat kapitolou 3 ve které navrhneme schéma ovládání pro náš jedenapůlruční meč. V kapitole 4 popíšeme celkový návrh a implementaci hry a meče, dopodrobna vylíčíme výzvy, které bylo třeba překonat, a řešení která jsme zvolili. Nakonec v kapitole 5 celkově zhodnotíme návrh našeho systému, rozebereme jeho silné a slabé stránky ve srovnání s existujícími hrami a zamyslíme se nad možnými směry pro navazující práce.
-\\
-\\
-\\
-\\
-\textit{Vypracoval Jakub Hroník}
