migrated from natbib to biblatex

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -210,13 +210,13 @@ sazbu definice s~titulkem.
   $(\Omega,\,\mathcal{A},\,\pr)$ do $(\R_n,\,\mathcal{B}_n)$.
 \end{veta}
 
-\begin{lemma}[\citealp{Andel07}, str. 29]\label{veta01:2}
+\begin{lemma}[Andel07, str. 29]\label{veta01:2}
   Náhodný vektor $\bm X$ je měřitelné zobrazení prostoru
   $(\Omega,\,\mathcal{A},\,\pr)$ do $(\R_n,\,\mathcal{B}_n)$.
 \end{lemma}
 \begin{dukaz}
-  Jednotlivé kroky důkazu jsou podrobně popsány v~práci \citet[str.
-  29]{Andel07}.
+  Jednotlivé kroky důkazu jsou podrobně popsány v~práci str.
+  29-Andel07.
 \end{dukaz}
 Věta~\ref{veta01:1} ukazuje použití prostředí pro sazbu matematické
 věty bez titulku, lemma~\ref{veta01:2} ukazuje použití prostředí pro
