--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -1,18 +1,4 @@
-%
-%  Vzor bibliografické databáze pro automatickou tvorbu seznamu referencí
-%  pomocí BibTeXu
-%
-%  Doporučený software pro správu databáze literatury formátu *.bib:
-%    JabRef, http://jabref.sourceforge.net/
-%
-%  POZOR:
-%
-%    *  Písmena v názvech publikací, jež je třeba tisknout vždy velká, se musejí psát
-%       do složených závorek ({T}hailand, {HIV})
-%
-%  ===========================================================================
-
-@software{Unity,
+@software{unity,
   author = {{Unity Technologies}},
   title = {Unity Engine},
   url = {https://unity.com/},
@@ -20,117 +6,27 @@
   date = {2023-03-25},
 }
 
-
-
-MISC{Unity,
-  title = "Unity",
-  organization = "Unity Technologies",
-  location = "Spojené Státy Americké",
-  howpublished = "[Internet]",
-  year = 2005,
+@software{kcd,
+  author = {{Unity Technologies}},
+  title = {Unity Engine},
+  url = {https://unity.com/},
+  version = {2022.2.10},
+  date = {2023-03-25},
 }
 
-@MISC{DieByTheSword,
-  title = "Die by the Sword",
-  organization = "Treyarch Corporation",
-  location = "Spojené Státy Americké",
-  howpublished = "[PC CD-ROM]",
-  year = 1998,
+@software{mountandblade,
+  author = {{Unity Technologies}},
+  title = {Unity Engine},
+  url = {https://unity.com/},
+  version = {2022.2.10},
+  date = {2023-03-25},
 }
 
-@MISC{MountAndBlade,
-  title = "Mount \& Blade",
-  organization = "TaleWorlds Entertainment",
-  location = "Švédsko",
-  howpublished = "[PC CD-ROM]",
-  year = 2008
+@software{diebythesword,
+  author = {{Unity Technologies}},
+  title = {Unity Engine},
+  url = {https://unity.com/},
+  version = {2022.2.10},
+  date = {2023-03-25},
 }
 
-@MISC{KCD,
-  title = "Kingdom Come: Deliverance",
-  organization = "Warhorse Studios s.r.o.",
-  location = "Česká Republika",
-  howpublished = "[PC Steam]",
-  year = 2018
-}
-
-@BOOK{Andel07,
-  title = {Základy matematické statistiky},
-  publisher = {Matfyzpress},
-  year = {2007},
-  author = {Anděl, J.},
-  address = {Praha},
-  series = {Druhé opravené vydání},
-  isbn = {80-7378-001-1}
-}
-
-@BOOK{Andel98,
-  title = {Statistické metody},
-  publisher = {Matfyzpress},
-  year = {1998},
-  author = {Anděl, J.},
-  address = {Praha},
-  series = {Druhé přepracované vydání},
-  isbn = {80-85863-27-8}
-}
-
-@ARTICLE{Cox72,
-  author = {Cox, D. R.},
-  title = {Regression models and life-tables (with {D}iscussion)},
-  journal = {Journal of the Royal Statistical Society, Series B},
-  year = {1972},
-  volume = {34},
-  pages = {187--220},
-  number = {2}
-}
-
-@ARTICLE{DempsterLairdRubin77,
-  author = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
-  title = {Maximum likelihood from incomplete data via the {EM} algorithm},
-  journal = {Journal of the Royal Statistical Society, Series B},
-  year = {1977},
-  volume = {39},
-  pages = {1--38},
-  number = {1}
-}
-
-@ARTICLE{Genberget08,
-  author = {Genberg, B. L. and Kulich, M. and Kawichai, S. and Modiba, P. and
-	Chingono, A. and Kilonzo, G. P. and Richter, L. and Pettifor, A.
-	and Sweat, M. and Celentano, D. D.},
-  title = {{HIV} risk behaviors in Sub-{S}aharan {A}frica and {N}orthern {T}hailand:
-	{B}aseline behavioral data from project {A}ccept},
-  journal = {Journal of Acquired Immune Deficiency Syndrome},
-  year = {2008},
-  volume = {49},
-  pages = {309--319}
-}
-
-@ARTICLE{KaplanMeier58,
-  author = {Kaplan, E. L. and Meier, P.},
-  title = {Nonparametric estimation from incomplete observations},
-  journal = {Journal of the American Statistical Association},
-  year = {1958},
-  volume = {53},
-  pages = {457--481},
-  number = {282}
-}
-
-@BOOK{LehmannCasella98,
-  title = {Theory of Point Estimation},
-  publisher = {Springer-Verlag},
-  year = {1998},
-  author = {Lehmann, E. L. and Casella, G.},
-  address = {New York},
-  series = {{S}econd {E}dition},
-  isbn = {0-387-98502-6}
-}
-
-@ARTICLE{Student08,
-  author = {Student},
-  title = {On the probable error of the mean},
-  journal = {Biometrika},
-  year = {1908},
-  volume = {6},
-  pages = {1-25}
-}
