--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -47,7 +47,10 @@
 \usepackage{graphicx}       % vkládání obrázků
 \usepackage{fancyvrb}       % vylepšené prostředí pro strojové písmo
 \usepackage{indentfirst}    % zavede odsazení 1. odstavce kapitoly
-\usepackage{natbib}         % zajištuje možnost odkazovat na literaturu
+
+\usepackage[backend=biber]{biblatex}
+
+%\usepackage{natbib}         % zajištuje možnost odkazovat na literaturu
 			    % stylem AUTOR (ROK), resp. AUTOR [ČÍSLO]
 \usepackage[nottoc]{tocbibind} % zajistí přidání seznamu literatury,
                             % obrázků a tabulek do obsahu
@@ -57,6 +60,7 @@
 \usepackage{paralist}       % lepší enumerate a itemize
 \usepackage{xcolor}         % barevná sazba
 
+\addbibresource{literatura.bib}
 %%% Údaje o práci
 
 % Název práce v jazyce práce (přesně podle zadání)
