filled reference placeholders with real data

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -1,32 +1,31 @@
-@software{unity,
+@software{Unity,
   author = {{Unity Technologies}},
   title = {Unity Engine},
   url = {https://unity.com/},
-  version = {2022.2.10},
+  version = {2022.2.10f},
   date = {2023-03-25},
 }
 
-@software{kcd,
-  author = {{Unity Technologies}},
-  title = {Unity Engine},
-  url = {https://unity.com/},
-  version = {2022.2.10},
-  date = {2023-03-25},
+
+@software{DieByTheSword,
+  author = {{Treyarch Corporation}},
+  title = {Die by the Sword},
+  url = {https://www.gog.com/game/die_by_the_sword_expansion},
+  date = {1998-02-28},
 }
 
-@software{mountandblade,
-  author = {{Unity Technologies}},
-  title = {Unity Engine},
-  url = {https://unity.com/},
-  version = {2022.2.10},
-  date = {2023-03-25},
+@software{MountAndBlade,
+  author = {{TaleWorlds Entertainment}},
+  title = {Mount\&Blade},
+  url = {https://www.taleworlds.com/en/Games/MountAndBlade},
+  date = {2005-04-02},
 }
 
-@software{diebythesword,
-  author = {{Unity Technologies}},
-  title = {Unity Engine},
-  url = {https://unity.com/},
-  version = {2022.2.10},
-  date = {2023-03-25},
+@software{KCD,
+  author = {{Warhorse Studios}},
+  title = {Kingdom Come: Deliverance},
+  url = {https://www.kingdomcomerpg.com/},
+  date = {2018-02-13},
 }
+
 
