drafted chapter names and some parts of their basic structure

--- a/cs/kap02.tex
+++ b/cs/kap02.tex
@@ -1,20 +1,9 @@
-%%% Fiktivní kapitola s ukázkami citací
+\chapter{Technický úvod}
+fd
 
-\chapter{Odkazy na literaturu}
+\section{Herní engine Unity}
+wss
 
-Odkazy na literaturu vytváříme nejlépe pomocí příkazů
-\verb|\citet|, \verb|\citep| atp.
-(viz {\LaTeX}ový balíček \textsf{natbib}) a~následného použití
-Bib{\TeX}u. V~matematickém textu obvykle odkazujeme stylem \uv{Jméno
-autora/autorů (rok vydání)}, resp. \uv{Jméno autora/autorů [číslo
-odkazu]}. V~českém/slovenském textu je potřeba se navíc vypořádat
-s~nutností skloňovat jméno autora, respektive přechylovat jméno
-autorky. Je potřeba mít na paměti, že standardní příkazy
-\verb|\citet|, \verb|\citep|
-produkují referenci se jménem autora/autorů v~prvním pádě a~jména
-autorek jsou nepřechýlena.
 
-Pokud nepoužíváme bib\TeX{}, řídíme se normou ISO 690 a zvyklostmi
-oboru.
-
-Jména časopisů lze uvádět zkráceně, ale pouze v~kodifikované podobě.
+\section{Fyzika}
+fd
