some corrections to section list

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -1,26 +1,45 @@
 \chapter{Úvod do problematiky}
 qfd
 
-\section{Boj s chladnou zbraní v reálném světě}
+
+\section{Boj s mečem v reálném světě}
 e
 
-\section{Zaklínač 3 - příklad typického stavu}
+
+
+\section{Typický stav}
+hdw
+
+\subsection{Zaklínač 3 - vzorový příklad}
 q
 
-\section{Chladná zbraň jako doplňkový prvek}
+\subsection{Chladná zbraň jako doplňkový prvek}
 dsa
 
-\section{Die by the Sword}
+
+
+\section{Hry s větší kontrolou}
+hh
+
+\subsection{Die by the Sword}
 gfd
 
-\section{Mount\&Blade}
+\subsection{Mount\&Blade}
 trq
 
-\section{Kingdom Come: Deliverance}
+\subsection{Kingdom Come: Deliverance}
 bgz
 
-\section{Virtuální realita}
+
+\section{Alternativní ovladače}
+uruzq
+
+\subsection{Virtuální realita}
 ghff
+
+\subsection{Obskurní periferie}
+hdj
+
 
 \section{Shrnutí}
 fd
